# projects-efnmr

./: README.md
cad/: readme.md  small_2010_Michal_2024_ROMA_Coils.FCStd
code/cpp/mr_nucleo/: CMakeLists.txt  main.cpp  mr_nucleo.cpp
code/polarization_coil_optimization/: polarization_coil_optimization.py
code/python/mr-nukleo/: main.py  pyproject.toml
code/python/mr-nukleo/mr_nukleo/: __init__.py  config.py  data_handler.py  hardware.py  pulse_sequences.py
code/python/opamp_circuit_analysis/: opamp_circuit.py  rx_amp_circuit.py
code/transmit_coil_sim/: transmit_coil_params.py
data/lipo_battery_test/: 241101_discharge_15R.txt  241102_discharge_15R.txt  plot.py
data/polarization_coil_on_off_current/: BG01.CSV
data/rx_test_amp_board_noise_meas/: plot.py
data/test_amplifier_board_measurement/: README.md  data_psd2_amp.csv  data_psd2_bg.csv  gain_interpf_log10log10.pickle  gain_measurement.py  gain_plotting.py  psd2_plotting.py  psd_measurement.py  psd_plotting.py
kicad/amplifier_board/: EFNMR_transmit_amp_board.kicad_pcb  EFNMR_transmit_amp_board.kicad_prl  EFNMR_transmit_amp_board.kicad_pro  EFNMR_transmit_amp_board.kicad_sch  amplifier_board.kicad_pcb  amplifier_board.kicad_prl  amplifier_board.kicad_sch
kicad/polarizing_coil_driver/: polarizing_coil_driver.kicad_pcb  polarizing_coil_driver.kicad_prl
kicad/test_amplifier_board/: test_amplifier_board.kicad_pcb  test_amplifier_board.kicad_pro  test_amplifier_board.kicad_sch
ltspice/Michal2010_coil_driver/: sim.asc  sim.op.raw  sim.plt
ltspice/Michal2010_receive_amp/: gain_simulation.asc
(+43 files in other folders)
