[project]
name = "mr-nukleo"
version = "0.1.0"
description = "MR_NUKLEO - A Python package for nuclear magnetic resonance (NMR) data processing and acquisition."
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = []
authors = [
    {name = "Roland Siegbert", email = "roland.siegbert@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]
keywords = ["nmr", "spectroscopy", "data processing", "chemistry"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
